tests/sksl/errors/ReservedNameOutput.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'output'
1 error
